[package]
name = "cfn"
version = "0.0.7"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Type-safe representations for AWS CloudFormation templates, resources and properties"
license = "MIT"
repository = "https://github.com/srijs/rust-cfn"
documentation = "https://docs.rs/cfn"
keywords = ["aws", "cloudformation", "template"]

[dependencies]
indexmap = { version = "1.0", features = ["serde-1"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
